--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -241,14 +241,47 @@
     "\n",
     "Each PIN code represents a certain arrangement where the order of the individual digits matters. Because order matters, the code 1289 is different than the code 9821, even though both are composed of the same four digits: 1, 2, 8 and 9. If the order of digits didn't matter, 1289 would be the same as 9821.\n",
     "\n",
-    "More generally, a certain arrangement where the order of the individual elements matters is called a permutation. For instance, there are 10,000 possible permutations for a 4-digit PIN code (in other words, there are 10,000 digit arrangements where the order of the digits matters)."
+    "More generally, a certain arrangement where the order of the individual elements matters is called a permutation. For instance, there are 10,000 possible permutations for a 4-digit PIN code (in other words, there are 10,000 digit arrangements where the order of the digits matters).\n",
+    "\n",
+    "<Img src=\"https://github.com/rhnyewale/INFO-7390-Advance-Data-Science-Architecture/blob/master/Images/permutation.jpg?raw=true\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def factorial(n):\n",
+    "    final_product = 1\n",
+    "    for i in range(n, 0, -1):\n",
+    "        final_product *= i\n",
+    "    return final_product\n",
+    "\n",
+    "permutations_1 = factorial(6) # because there are 6 letters\n",
+    "permutations_2 = factorial(52)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720 80658175170943878571660636856403766975289505440883277824000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(permutations_1,permutations_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -256,14 +289,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def factorial(n):\n",
+    "    final_product = 1\n",
+    "    for i in range(n, 0, -1):\n",
+    "        final_product *= i\n",
+    "    return final_product\n",
+    "def permutation(n, k):\n",
+    "    numerator = factorial(n)\n",
+    "    denominator = factorial(n-k)\n",
+    "    return numerator/denominator\n",
+    "\n",
+    "total_n_outcomes = permutation(127, 16)\n",
+    "p_crack_pass = 1/total_n_outcomes"
+   ]
   },
   {
    "cell_type": "code",
