--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -282,11 +282,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<Img src=\"https://github.com/rhnyewale/INFO-7390-Advance-Data-Science-Architecture/blob/master/Images/permutation2.jpg?raw=true\">"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +297,7 @@
     "    for i in range(n, 0, -1):\n",
     "        final_product *= i\n",
     "    return final_product\n",
+    "\n",
     "def permutation(n, k):\n",
     "    numerator = factorial(n)\n",
     "    denominator = factorial(n-k)\n",
@@ -306,10 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.851813813338265e-34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p_crack_pass)"
+   ]
   },
   {
    "cell_type": "code",
