--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -325,6 +325,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combination\n",
+    "\n",
+    "<Img src=\"https://github.com/rhnyewale/INFO-7390-Advance-Data-Science-Architecture/blob/master/Images/combination.jpg?raw=true\">\n",
+    "\n",
+    "<Img src=\"https://github.com/rhnyewale/INFO-7390-Advance-Data-Science-Architecture/blob/master/Images/combination2.jpg?raw=true\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.151123842018516e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = permutation(52,5) / factorial(5)\n",
+    "p_aces_7 = 1/c\n",
+    "\n",
+    "c_lottery = permutation(49,6) / factorial(6)\n",
+    "p_big_prize = 1/c_lottery\n",
+    "print(p_big_prize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the order of the elements in an arrangement doesn't matter, the arrangement is called a **combination**. Combinations are the opposite of permutations, where the order of the elements does matter.\n",
+    "\n",
+    "To sum it up, we have two kinds of arrangements:\n",
+    "\n",
+    "* Arrangements where the order matters, which we call permutations.\n",
+    "* Arrangements where the order doesn't matter, which we call combinations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
